...
  const WorkoutListScreen({super.key, required this.workoutsDatasource});

  @override
  Widget build(BuildContext context) {
    return Scaffold(
      appBar: AppBar(
        title: const Text('Workout List'),
      ),
      body: Padding(
        padding: const EdgeInsets.all(16.0),
        child: BlocBuilder<WorkoutsCubit, WorkoutsState>(
          builder: (context, state) {
            if (state is WorkoutsLoaded) {
...
              child: const Text('Cancel'),
              onPressed: () {
                Navigator.of(context).pop(); // Close the dialog
              },
            ),
            TextButton(
              child: const Text('Delete', style: TextStyle(color: Colors.red)),
              onPressed: () {
                Navigator.of(context).pop(); // Close the dialog
                context.read<WorkoutsCubit>().deleteWorkout(workoutId);
                _showDeletedFeedback(context);
              },
            ),
...
